[GITHUB-4] Update to Latest Standards

--- a/templates/ntp.conf.j2
+++ b/templates/ntp.conf.j2
@@ -14,7 +14,7 @@ filegen peerstats file peerstats type day enable
 filegen clockstats file clockstats type day enable
 
 # Specify one or more NTP servers.
-{% for ntp_server in ntp.servers %}
+{% for ntp_server in sansible_ntp_servers %}
 server {{ ntp_server }} iburst
 {% endfor %}
 
